# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  geometry.hpp  main.cpp  run.sh
images/: 3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm
